--- a/editor/editor.html
+++ b/editor/editor.html
@@ -13,6 +13,7 @@
       </div>
     </div>
     <webview id="site" src="http://localhost:8080"></webview>
+    <script>var exports = {};</script>
     <script src="editor.js"></script>
   </body>
 </html>
