--- a/editor/editor.html
+++ b/editor/editor.html
@@ -12,7 +12,7 @@
       <div id="controls">
       </div>
     </div>
-    <webview id="site" src="http://localhost:8080"></webview>
+    <webview id="site"></webview>
     <script>var exports = {};</script>
     <script src="editor.js"></script>
   </body>
